app/tools/n8n/n8n-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: n8n
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
        - image: n8nio/n8n
          name: n8n
          imagePullPolicy: Always
          resources:
            limits: # you restrict the maximum amount of memory available to the pods
              memory: "1024M"
              cpu: "500m"
            requests: # allow you to allocate a guaranteed minimum of computing resources for the pods r
              memory: "256M"
              cpu: "250m"
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: config
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: n8n
status: {}
