app/tools/n8n/n8n-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: n8n
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
