app/tools/n8n/n8n-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/group: Operations
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
  name: n8n
  namespace: tools
spec:
  ingressClassName: traefik
  rules:
  - host: n8n.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: n8n
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - n8n.home.adaminformatika.hu
    secretName: n8n.home.adaminformatika.hu
